feat: prepare frontend dashboard demo
